# python-api-dev-course

./: alembic.ini  pyproject.toml
alembic-db/: env.py
alembic-db/versions/: 1c77065ebf0c_create_user_table.py  30478758673d_add_auto_votes.py  7344c3343bcc_add_last_post_columns.py  a73f955f3035_add_foreign_keys.py  afc908930447_create_post_table.py  f2ee1a17a232_add_content_in_post_table.py
app/: config.py  database.py  main.py  models.py  oauth2.py  schemas.py  utils.py
app/routers/: auth.py  post.py  user.py  vote.py
